--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       "> status: online",
       "> role: Freelance Pentester / Cyber Enthusiast",
       "> about_me",
-      "Aku adalah seorang yang melihat dunia apa adanya Tidak suka bermimpi terlalu tinggi tanpa aksi nyata. Dia tahu kapan harus optimis dan kapan harus bersiap menghadapi kenyataan.",
+      "Deahs itu orang yang melihat dunia apa adanya. Tidak suka bermimpi terlalu tinggi tanpa aksi nyata. Dia tahu kapan harus optimis dan kapan harus bersiap menghadapi kenyataan.",
       "> skills",
       "- Analisis    [██████████] 90%",
       "- Olahraga    [████████  ] 80%",
